# oncology-datapipeline

./: .gitignore  Makefile  PROGRESS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  data-quality-checks.yml
dashboards/: quality_dashboard.py
great_expectations/: great_expectations.yml
great_expectations/expectations/: oncology_lab_results_suite.json  oncology_patients_suite.json  oncology_treatments_suite.json
gx/expectations/: .ge_store_backend_id
src/: __init__.py  cli.py
src/connectors/: __init__.py  base.py  connection_factory.py  databricks_connector.py  sqlserver_connector.py
src/data_quality/: __init__.py  checkpoint_manager.py  expectation_builder.py  validation_runner.py
src/domain/: __init__.py  exceptions.py
src/metrics/: __init__.py  quality_scorecard.py
src/pipelines/: __init__.py  base_pipeline.py  quality_pipeline.py
src/profiling/: __init__.py  anomaly_detector.py  data_profiler.py  drift_detector.py
src/synthetic_data/: __init__.py  oncology_data_factory.py
src/synthetic_data/generators/: __init__.py  lab_results_generator.py  patient_generator.py  treatment_generator.py
src/synthetic_data/schemas/: __init__.py  oncology_schemas.py
src/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_data_quality.py  test_profiling.py  test_synthetic_data.py
